--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,9 +1,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
-        android:title="@string/pref_sort_by"
         android:key="@string/pref_sort_key"
-        android:defaultValue=""/>
+        android:title="@string/pref_sort_by"
+        android:defaultValue="0"
+        android:entries="@array/sort_array"
+        android:entryValues="@array/sort_array_values"/>
 
+    <EditTextPreference
+        android:defaultValue="def"
+        android:inputType="number"
+        android:title="title" />
 
 </PreferenceScreen>
