preference functional, movie image issue

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="sort_array">
-        <item>Most Popular</item>
-        <item>Highest Rated</item>
+        <item>@string/pref_popularity_label</item>
+        <item>@string/pref_rating_label</item>
     </string-array>
     <string-array name="sort_array_values">
-        <item>popularity.desc</item>
-        <item>vote_average.desc</item>
+        <item>@string/pref_popularity_value</item>
+        <item>@string/pref_rating_value</item>
     </string-array>
 </resources>
