--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -13,11 +13,12 @@
         android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="90sp"
+        android:columnWidth="200sp"
         android:gravity="center"
-        android:horizontalSpacing="10sp"
+        android:horizontalSpacing="8sp"
         android:numColumns="2"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10sp"/>
+        android:stretchMode="spacingWidth"
+        android:verticalSpacing="8sp"
+        />
 
 </FrameLayout>
