--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,10 @@
 
     </style>
 
+    <style name="RatingBarTheme" parent="Theme.AppCompat">
+        <item name="colorControlNormal">#8f3</item>
+        <item name="colorControlActivated">#29f</item>
+        <item name="colorControlHighlight">#fff</item>
+
+    </style>
 </resources>
